[package]
name = "argpars"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Ernest1338"]
description = "Dependency-less, simple yet functional Command Line Argument Parser"
repository = "https://github.com/Ernest1338/argpars"
homepage = "https://github.com/Ernest1338/argpars"
documentation = "https://docs.rs/argpars"
readme = "README.md"
keywords = ["cli", "argument", "parser"]

[dependencies]
